--- a/cv.html
+++ b/cv.html
@@ -31,10 +31,9 @@
       <div class="container">
         <ul class="nav pull-left">
           <li  ><a href="index.html"><i class="icon-home"></i> Home</a></li>
-          <li  ><a href="publications.html"><i class="icon-pencil"></i> Talks</a></li>
-          <li  ><a href="projects.html"><i class="icon-wrench"></i> Projects</a></li>
-          <li class="activ"  ><a href="cv.html"><i class="icon-file"></i> CV</a></li>
-          <li  ><a href="apropos.html"><i class="icon-user"></i>Bio</a></li>
+          <li  ><a href="publications.html"><i class="icon-pencil"></i> Downloads</a></li>
+          <li  ><a href="projects.html"><i class="icon-wrench"></i>Projects</a></li>
+          <li class="activ"  ><a href="cv.html"><i class="icon-file"></i>Resume</a></li>
         </ul>
         <ul class="nav social pull-right">
           <li><a href="https://twitter.com/walidsa3d" class="icon-twitter icon"></a></li>
@@ -113,17 +112,6 @@
   	<span class="label label-info">UML</span>
   </dd>
 </dl>
-
-<dl class="dl-horizontal">
-	<dt>Source control</dt>
-	<dd>
-		<span class="label label-info">Maven</span>
-		<span class="label label-info">Git</span>
-		<span class="label label-info">SVN</span>
-	</dd>
-</dl>
-
-
 
 <br>
 
@@ -287,7 +275,7 @@
 </div>
 
 <div class="row">
-	<div class="span2"><img class="well" src="assets/img/bull-60.png" alt="Bull"></div>
+	<div class="span2"><img class="well" src="images/esprit_logo.gif" alt="Bull"></div>
 	<div class="span10">
 		<p>
 			<span class="lead">Graduation Project, EspriTech</span> <br>
@@ -318,12 +306,12 @@
 <hr>
 
 <div class="row">
-	<div class="span2"><img class="well" src="assets/img/inria-60.png" alt="Inria"></div>
+	<div class="span2"><img class="well" src="images/gct.jpg" alt="gct"></div>
 	<div class="span10">
 		<p>
 			<span class="lead">Internship, Groupe Chimique Tunisien</span> <br>
 			<span class="muted">Gafsa, Tunisia</span> <br>
-			<span class="muted">June 2009 - Auguest 2009</span> <span class="label">Ended</span>
+			<span class="muted">June 2012 - Auguest 2012</span> <span class="label">Ended</span>
 		</p>
 		<p>Creation of a website for the company</p>
 		<p>
@@ -341,7 +329,7 @@
 <br>
 
 <div class="page-header">
-	<h1>Training</h1>
+	<h1>Education</h1>
 </div>
 
 <div class="row">
@@ -400,7 +388,6 @@
       <h4 class="title">Find Me</h4>
       <p class="pull-right"><a href="cv.html#" class="top">Top</a></p>
       <ul class="footer-links">
-        <li><a href="atom.xml">RSS</a></li>
         <li><a href="https://twitter.com/walidsa3d">Twitter</a></li>
         <li><a href="https://github.com/walidsa3d">Github</a></li>
         <li><a href="http://www.linkedin.com/in/walidsa3d">LinkedIn</a></li>
