--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,6 @@
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
  <title>Projects - Walid Saad</title>
  <meta name="author" content="Walid Saad" />
- <link href="atom.xml" rel="alternate" title="Walid's blog" type="application/atom+xml" />
-
  <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css" />
  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
  <link rel="stylesheet" type="text/css" href="css/julienvey.css" />
@@ -30,11 +28,10 @@
       </div>
       <div class="container">
         <ul class="nav pull-left">
-          <li  ><a href="index.html"><i class="icon-home"></i> Home</a></li>
-          <li  ><a href="publications.html"><i class="icon-pencil"></i> Talks</a></li>
+          <li  ><a href=".html"><i class="icon-home"></i> Home</a></li>
+          <li  ><a href="publications.html"><i class="icon-pencil"></i> Downloads</a></li>
           <li class="activ" ><a href="projects.html"><i class="icon-wrench"></i> Projects</a></li>
-          <li   ><a href="cv.html"><i class="icon-file"></i> CV</a></li>
-          <li  ><a href="apropos.html"><i class="icon-user"></i>Bio</a></li>
+          <li   ><a href="cv.html"><i class="icon-file"></i>Resume</a></li>
         </ul>
         <ul class="nav social pull-right">
           <li><a href="https://twitter.com/walidsa3d" class="icon-twitter icon"></a></li>
@@ -106,7 +103,6 @@
       <h4 class="title">Find Me</h4>
       <p class="pull-right"><a href="projects.html#" class="top">Top</a></p>
       <ul class="footer-links">
-        <li><a href="atom.xml">RSS</a></li>
         <li><a href="https://twitter.com/walidsa3d">Twitter</a></li>
         <li><a href="https://github.com/walidsa3d">Github</a></li>
         <li><a href="http://www.linkedin.com/in/walidsa3d">LinkedIn</a></li>
