added download link to french cv

--- a/publications.html
+++ b/publications.html
@@ -47,9 +47,9 @@
   <div class="container">
     <div class="row">
 	<div class="span12">
-<a href="#" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-circle-arrow-down"></span> Download PDF Resume</a>
+<a href="#" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-circle-arrow-down"></span> Download English Resume</a>
 <hr>
-<a href="#" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-circle-arrow-down"></span> Download Word Resume</a>
+<a href="assets/walid-saad-cv.pdf" class="btn btn-lg btn-success"><span class="glyphicon glyphicon-circle-arrow-down"></span> Download French Resume</a>
 
 </div>
 </div>
