--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   <div class="navbar navbar-static-top banner">
     <div class="navbar-inner">
       <div class="container">
-        <span class="brand"><a href="index.html">Walid<b>Saad</b></a></span>
+        <span class="brand"><a href="index.html"><h1>Walid Saad</h1></a></span>
       </div>
       <div class="container">
         <ul class="nav pull-left">
           <li  ><a href="#home"><i class="icon-home"></i> Home</a></li>
-          <li  ><a href="#downloads"><i class="icon-pencil"></i> Downloads</a></li>
           <li  ><a href="#projects"><i class="icon-wrench"></i> Projects</a></li>
           <li   ><a href="#cv"><i class="icon-file"></i>Resume</a></li>
+                    <li  ><a href="#downloads"><i class="icon-pencil"></i> Downloads</a></li>
           </ul>
         <ul class="nav social pull-right">
           <li><a href="https://twitter.com/walidsa3d" class="icon-twitter icon"></a></li>
