--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="ResumeApp">
 <head>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
- <title>Home- Walid Saad</title>
+ <title>Walid Saad</title>
  <meta name="author" content="Walid Saad" />
  <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.min.css" />
  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
