added blog feed

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
       </div>
       <div class="container">
         <ul class="nav pull-left">
-          <li  ><a href="#home"><i class="icon-home"></i> Home</a></li>
-          <li  ><a href="#projects"><i class="icon-wrench"></i> Projects</a></li>
-          <li   ><a href="#cv"><i class="icon-file"></i>Resume</a></li>
-                    <li  ><a href="#downloads"><i class="icon-pencil"></i> Downloads</a></li>
+          <li><a href="#home"><i class="icon-home"></i> Home</a></li>
+          <li><a href="#projects"><i class="icon-wrench"></i> Projects</a></li>
+          <li><a href="#cv"><i class="icon-file"></i>Resume</a></li>
+          <li><a href="#downloads"><i class="icon-pencil"></i> Downloads</a></li>
+          <li><a href="#github"><i class="icon-pencil"></i>Github</a></li>
+          <li><a href="#blog"><i class="icon-pencil"></i>Blog</a></li>
           </ul>
         <ul class="nav social pull-right">
           <li><a href="https://twitter.com/walidsa3d" class="icon-twitter icon"></a></li>
