--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <script type="text/javascript" src="js/angular-route.min.js"></script>
   <script src="scripts/app.js"></script>
   <script src="scripts/routes.js"></script>
+  <script src="scripts/factories.js"></script>
   <script src="scripts/controllers.js"></script>
+
 
 </head>
 <body onload="prettyPrint()">
@@ -34,9 +36,9 @@
           <li><a href="#home"><i class="icon-home"></i> Home</a></li>
           <li><a href="#projects"><i class="icon-wrench"></i> Projects</a></li>
           <li><a href="#cv"><i class="icon-file"></i>Resume</a></li>
-          <li><a href="#downloads"><i class="icon-pencil"></i> Downloads</a></li>
           <li><a href="#github"><i class="icon-pencil"></i>Github</a></li>
           <li><a href="#blog"><i class="icon-pencil"></i>Blog</a></li>
+          <li><a href="#downloads"><i class="icon-pencil"></i> Downloads</a></li>
           </ul>
         <ul class="nav social pull-right">
           <li><a href="https://twitter.com/walidsa3d" class="icon-twitter icon"></a></li>
