--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
   <script type="text/javascript" src="js/angular.min.js"></script>
   <script type="text/javascript" src="js/angular-route.min.js"></script>
     <script type="text/javascript" src="js/angular-animate.min.js"></script>
-
+    <script src="js/d3.min.js"></script>
+<script src="js/nv.d3.min.js"></script>
+<script src="js/angular-nvd3.min.js"></script>
+<link rel="stylesheet" href="js/nv.d3.min.css"/>
   <script src="scripts/app.js"></script>
   <script src="scripts/routes.js"></script>
   <script src="scripts/factories.js"></script>
@@ -42,7 +45,7 @@
 <body>
 
     <div id="wrapper">
-
+          
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
@@ -55,32 +58,32 @@
                     <a href="#home">Home</a>
                 </li>
                 <li>
-                    <a href="#skills">Technical Skills</a>
+                    <a href="#skills" onmouseover="this.click()">Technical Skills</a>
                 </li>
                                 <li>
-                    <a href="#languages">Languages</a>
+                    <a href="#languages" onmouseover="this.click()">Languages</a>
                 </li>
                                 <li>
-                    <a href="#internships">Internships</a>
+                    <a href="#internships" onmouseover="this.click()">Internships</a>
                 </li>
                                 </li>
                                 <li>
-                    <a href="#education">Education</a>
+                    <a href="#education" onmouseover="this.click()">Education</a>
                 </li>
                 <li>
-                    <a href="#projects">Projects</a>
+                    <a href="#projects" onmouseover="this.click()">Projects</a>
 
                 <li>
-                    <a href="#github">Github</a>
+                    <a href="#github" onmouseover="this.click()">Github</a>
                 </li>
                 <li>
-                    <a href="#blog">Blog</a>
+                    <a href="#blog" onmouseover="this.click()">Blog</a>
                 </li>
                 <li>
-                    <a href="#downloads">Downloads</a>
+                    <a href="#downloads" onmouseover="this.click()">Downloads</a>
                 </li>
                 <li>
-                    <a href="#contact">Contact</a>
+                    <a href="#contact onmouseover="this.click()"">Contact</a>
                 </li>
             </ul>
         </div>
@@ -91,6 +94,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
+               
                      <div ng-view class="flip"></div>
 <!-- <ng-view class ="view-slide-in"></ng-view> 
  -->                    </div>
@@ -100,6 +104,7 @@
         <!-- /#page-content-wrapper -->
 
     </div>
+
 </body>
 
 </html>
